# Ping-pong-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Application.cpp.DC4ED989D9927224.idx  Application.hpp.D4019A3757BD4D7E.idx  Ball.cpp.FE32AD57A108D9AC.idx  Ball.hpp.7AE5F8A74E16519E.idx  Enemy.cpp.D9590DC1404C1A3E.idx  Enemy.hpp.8EEE16AC1AC0E57E.idx  Player.cpp.5FF64BC756BA0AC4.idx  Player.hpp.095272C761D07391.idx  main.cpp.909777921E29FDE9.idx  myEBO.cpp.EEAB257F9A098DC6.idx  myEBO.hpp.03440118F115FC62.idx  myShader.cpp.BC1B434EA5872470.idx  myShader.hpp.E11B80904F23303D.idx  myVAO.cpp.369FA509A626C496.idx  myVAO.hpp.0DF1A648171D2261.idx  myVBO.cpp.EF5A3A397D677D57.idx  myVBO.hpp.CAD32BC0718FF6A4.idx  myWindow.cpp.79195BE2D916CB40.idx  myWindow.hpp.597EFC4DBE6F901B.idx
.zed/: debug.json
src/: main.cpp
src/include/: Application.hpp  Ball.hpp  Enemy.hpp  Player.hpp  myEBO.hpp  myShader.hpp  myVAO.hpp  myVBO.hpp  myWindow.hpp  shaders.hpp
src/shader/: shader.vert
src/source/: Application.cpp  Ball.cpp  Enemy.cpp  Player.cpp  myEBO.cpp  myShader.cpp  myVAO.cpp  myVBO.cpp  myWindow.cpp
